--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.2.2",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
   }
