--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
+    "prismjs": "^1.27.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
